2008-07-25  Brady Eidson  <beidson@apple.com>

        Reviewed by Sam

        Add the ability to dump whether-or-not an element should have autocomplete enabled, 
        from the perspective of the WebKit API

        * DumpRenderTree/LayoutTestController.cpp:
        (elementDoesAutoCompleteForElementWithIdCallback):
        (LayoutTestController::staticFunctions):

        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::elementDoesAutoCompleteForElementWithId):
        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::elementDoesAutoCompleteForElementWithId): Stub for now until I can get on Windows

2008-07-25  chris fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin

        Add support for AXLineForIndex and AXInsertionPointIndex through the 
        accessibility controller

        * DumpRenderTree/AccessibilityUIElement.cpp:
        (lineForIndexCallback):
        (getInsertionPointLineNumberCallback):
        (AccessibilityUIElement::getJSClass):
        * DumpRenderTree/AccessibilityUIElement.h:
        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        (AccessibilityUIElement::insertionPointLineNumber):
        (AccessibilityUIElement::lineForIndex):

2008-07-25  Adam Roben  <aroben@apple.com>

        Try to fix the Windows build bot

        * DumpRenderTree/win/DumpRenderTree.vcproj: Don't try to copy files
        that don't exist for people outside of Apple.

2008-07-18  Landry Breuil  <landry@openbsd.org>

        Bug 19975: [OpenBSD] Patches to enable build of WebKit

        <https://bugs.webkit.org/show_bug.cgi?id=19975>

        Reviewed by David Kilzer.

        * DumpRenderTree/DumpRenderTree.h: OpenBSD doesn't support wide characters.

2008-07-16  Jon Honeycutt  <jhoneycutt@apple.com>

        CygwinDownloader fails to install necessary packages
        https://bugs.webkit.org/show_bug.cgi?id=20075
